@@ -39,7 +39,7 @@ public class CombinedAnalysis extends Analysis {
 
         List<CovidData> covidData = dataset.getCovidData().stream()
                 .filter(data -> data.getTimestamp().startsWith(date))
-                .toList();
+                .collect(Collectors.toList());
 
         // find full vaccination number for specified zipcode
         int fullVax = 0;
